source/hamster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hamster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hamster
  template:
    metadata:
      labels:
        app: hamster
    spec:
      containers:
      - name: hamster
        image: busybox:1.36
        command:
          - /bin/sh
          - -c
          - while true; do yes > /dev/null; done
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
