source/allow-from-monitoring-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-monitoring-ns
spec:
  podSelector: {} # 현재 네임스페이스의 모든 Pod 대상
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring # 'name: monitoring' 라벨이 붙은 네임스페이스만 허용
